# nutrition-assistant-service

./: .env  __init__.py  pyproject.toml
application/: events.py  main.py
application/api/: __init__.py
application/api/routes/: __init__.py
application/api/routes/v1/: __init__.py  settings_route.py
application/core/: __init__.py  _config.py
application/core/settings/: app.py
application/resources/: error_codes.py
application/schemas/: __init__.py  base.py
application/schemas/v1/: answers_schema.py
scripts/: entrypoint.sh  gunicorn_config.py
tests/: conftest.py
